update web site

--- a/nodejs/mizot/README
+++ b/nodejs/mizot/README
@@ -3,3 +3,8 @@ color template : http://www.colourlovers.com/palette/292482/Terra
 
 TODO :
 link for email
+update HAL link to last publi
+correct utf8 mistakes
+remove download resume
+add publications on working page
+mobile version with media queries
