--- a/nodejs/mizot/README
+++ b/nodejs/mizot/README
@@ -2,9 +2,7 @@ using express, jade
 color template : http://www.colourlovers.com/palette/292482/Terra
 
 TODO :
-link for email
 update HAL link to last publi
-correct utf8 mistakes
-remove download resume
-add publications on working page
 mobile version with media queries
+complete work section
+update on researchers...
