--- a/nodejs/isoldry/README
+++ b/nodejs/isoldry/README
@@ -1,9 +1,11 @@
-Install :
+Divers :
+- put svg and all logo on repository
+- vrais contenus
 
 Deploy :
 - 1 command deploy 
-
+- google analytics and webtools
 
 Design :
 - texture en fond
-- 
+- favicon
