--- a/nodejs/mizot/README
+++ b/nodejs/mizot/README
@@ -4,7 +4,10 @@ and jquery corner
 color template : http://www.colourlovers.com/palette/292482/Terra
 
 TODO :
-update HAL link to last publi
 mobile version with media queries
 complete work section
-update on researchers...
+linked in
+
+Tipo : 
+I do like ?
+lawer facil?
